# services/Customer.API/Controllers/CustomerPhone.cs
@@ -13,13 +13,13 @@ using Microsoft.EntityFrameworkCore;
 using Newtonsoft.Json;
 
 namespace Customer.API.Controllers {
-    [Route ("customer/api/v1/corporate-customers")]
+    [Route ("customer/api/v1/customers/{customerNumber}/phones")]
     [ApiController]
-    public class CorporateCustomerController : ControllerBase {
+    public class CustomerPhoneController : ControllerBase {
         private readonly Infrastructure.Contexts.CustomerContext _customerContext;
         private readonly ICustomerEventBusService _customerEventBusService;
 
-        public CorporateCustomerController (Infrastructure.Contexts.CustomerContext context, ICustomerEventBusService customerEventBusService) {
+        public CustomerPhoneController (Infrastructure.Contexts.CustomerContext context, ICustomerEventBusService customerEventBusService) {
             _customerContext = context ??
                 throw new ArgumentNullException (nameof (context));
             _customerEventBusService = customerEventBusService ??
@@ -29,12 +29,18 @@ namespace Customer.API.Controllers {
         }
 
         [HttpGet]
-        [ProducesResponseType (typeof (IEnumerable<CorporateCustomer>), (int) HttpStatusCode.OK)]
+        [ProducesResponseType (typeof (IEnumerable<CustomerPhone>), (int) HttpStatusCode.OK)]
         [ProducesResponseType (typeof (string), (int) HttpStatusCode.OK)]
         [ProducesResponseType (typeof (Error), (int) HttpStatusCode.BadRequest)]
         [ProducesResponseType (typeof (Error), (int) HttpStatusCode.InternalServerError)]
-        public async Task<IActionResult> GetAsync ([FromQuery] int? limit, [FromQuery] int? offset, [FromQuery] string sorts, [FromQuery] string fields, [FromQuery] string searches) {
-            var items = await _customerContext.CorporateCustomer.AsQueryable<CorporateCustomer> ()
+        public async Task<IActionResult> GetAsync ([FromRoute] int customerNumber, [FromQuery] int? limit, [FromQuery] int? offset, [FromQuery] string sorts, [FromQuery] string fields, [FromQuery] string searches) {
+            if (string.IsNullOrEmpty (searches)) {
+                searches = "customerNumber[=]" + customerNumber;
+            } else {
+                searches += ",customerNumber[=]" + customerNumber;
+            }
+
+            var items = await _customerContext.CustomerPhone.AsQueryable<CustomerPhone> ()
                 .DynamicWhere (searches)
                 .DynamicOrder (sorts)
                 .DynamicSelect (fields)
@@ -46,21 +52,21 @@ namespace Customer.API.Controllers {
         }
 
         [HttpPost]
-        [ProducesResponseType (typeof (CorporateCustomer), (int) HttpStatusCode.OK)]
+        [ProducesResponseType (typeof (CustomerPhone), (int) HttpStatusCode.OK)]
         [ProducesResponseType (typeof (Error), (int) HttpStatusCode.BadRequest)]
         [ProducesResponseType (typeof (Error), (int) HttpStatusCode.InternalServerError)]
-        public async Task<IActionResult> AddAsync ([FromBody] CorporateCustomer newCustomer) {
-            _customerContext.CorporateCustomer.Add (newCustomer);
+        public async Task<IActionResult> AddAsync ([FromRoute] int customerNumber, [FromBody] CustomerPhone newPhone) {
+            _customerContext.CustomerPhone.Add (newPhone);
             await _customerContext.SaveChangesAsync ();
 
-            return Ok (newCustomer);
+            return Ok (newPhone);
         }
 
         [HttpPut]
-        [ProducesResponseType (typeof (CorporateCustomer), (int) HttpStatusCode.OK)]
+        [ProducesResponseType (typeof (CustomerPhone), (int) HttpStatusCode.OK)]
         [ProducesResponseType (typeof (Error), (int) HttpStatusCode.BadRequest)]
         [ProducesResponseType (typeof (Error), (int) HttpStatusCode.InternalServerError)]
-        public async Task<IActionResult> UpdateAsync ([FromBody] CorporateCustomer customerToUpdate) {
+        public async Task<IActionResult> UpdateAsync ([FromRoute] int customerNumber, [FromBody] CustomerPhone phoneToUpdate) {
             // var customerItem = await _customerContext.RetailCustomer.SingleOrDefaultAsync(i => i.Id == customerToUpdate.Id);
 
             //TODO return not found error
@@ -69,10 +75,10 @@ namespace Customer.API.Controllers {
             //     return NotFound(new { Message = $"Item with id {customerToUpdate.Id} not found." });
             // }
 
-            _customerContext.CorporateCustomer.Update (customerToUpdate);
+            _customerContext.CustomerPhone.Update (phoneToUpdate);
 
             await _customerContext.SaveChangesAsync ();
-            return Ok (customerToUpdate);
+            return Ok (phoneToUpdate);
         }
 
         [HttpDelete]
@@ -80,16 +86,16 @@ namespace Customer.API.Controllers {
         [ProducesResponseType ((int) HttpStatusCode.OK)]
         [ProducesResponseType (typeof (Error), (int) HttpStatusCode.BadRequest)]
         [ProducesResponseType (typeof (Error), (int) HttpStatusCode.InternalServerError)]
-        public async Task<IActionResult> DeleteAsync ([FromRoute] string id) {
+        public async Task<IActionResult> DeleteAsync ([FromRoute] int customerNumber, [FromRoute] string id) {
             //TODO return not found error
-            var customerItem = await _customerContext.CorporateCustomer.SingleOrDefaultAsync (i => i.Id == id);
+            var phoneItem = await _customerContext.CustomerPhone.SingleOrDefaultAsync (i => i.CustomerNumber == customerNumber && i.Id == id);
 
             // if (customerItem == null)
             // {
             //     return NotFound(new { Message = $"Item with id {customerToUpdate.Id} not found." });
             // }
 
-            _customerContext.CorporateCustomer.Remove (customerItem);
+            _customerContext.CustomerPhone.Remove (phoneItem);
 
             await _customerContext.SaveChangesAsync ();
             return Ok ();
@@ -97,10 +103,10 @@ namespace Customer.API.Controllers {
 
         [HttpGet]
         [Route ("{id}")]
-        [ProducesResponseType (typeof (CorporateCustomer), (int) HttpStatusCode.OK)]
+        [ProducesResponseType (typeof (CustomerPhone), (int) HttpStatusCode.OK)]
         [ProducesResponseType (typeof (Error), (int) HttpStatusCode.BadRequest)]
         [ProducesResponseType (typeof (Error), (int) HttpStatusCode.InternalServerError)]
-        public async Task<IActionResult> GetbyIdAsync ([FromRoute] string id) {
+        public async Task<IActionResult> GetbyIdAsync ([FromRoute] int customerNumber, [FromRoute] string id) {
             //TODO return not found error
             // var customerItem = await _customerContext.RetailCustomer.SingleOrDefaultAsync(i => i.Id == customerToUpdate.Id);
 
@@ -109,9 +115,10 @@ namespace Customer.API.Controllers {
             //     return NotFound(new { Message = $"Item with id {customerToUpdate.Id} not found." });
             // }
 
-            CorporateCustomer customer = await _customerContext.CorporateCustomer.Where (x => x.Id == id).SingleOrDefaultAsync ();
+            CustomerPhone customer = await _customerContext.CustomerPhone.Where (x => x.CustomerNumber == customerNumber && x.Id == id).SingleOrDefaultAsync ();
 
             return Ok (customer);
         }
+
     }
 }
